aks-virtualservice-hijack/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2
  namespace: app2
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: app2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bad-vs
  namespace: app2
spec:
  hosts:
  - "app1-myapp"  # Attempting to hijack app1's hostname
  gateways:
  - istio-system/gateway
  http:
  - route:
    - destination:
        host: app2
        port:
          number: 80
